--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@parcel/config-default": "^2.7.0",
     "axios": "^1.1.3",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.5"
+    "notiflix": "^3.2.5",
+    "simplelightbox": "^2.10.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
